Lianas_personal_website_cv

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="format-detection" content="telephone=no, email=no, address=no" />
     <title>Liana Drakopoulou — Organizational Psychology & People Ops</title>
     <meta
       name="description"
@@ -22,9 +23,10 @@
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <link rel="apple-touch-icon" href="assets/favicon.svg" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet" />
+  <link rel="preload" as="image" href="assets/Screenshot%202025-09-20%20at%2014.24.55.png" imagesrcset="assets/Screenshot%202025-09-20%20at%2014.24.55.png 800w" imagesizes="(max-width: 760px) 168px, 200px" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -125,7 +127,7 @@
           </div>
           <div class="hero-media">
             <div class="avatar" title="Portrait of Liana Drakopoulou">
-              <img src="assets/Screenshot%202025-09-20%20at%2014.24.55.png" alt="Portrait of Liana Drakopoulou" decoding="async" fetchpriority="high" />
+              <img src="assets/Screenshot%202025-09-20%20at%2014.24.55.png" alt="Portrait of Liana Drakopoulou" width="800" height="800" decoding="async" fetchpriority="high" sizes="(max-width: 760px) 168px, 200px" />
             </div>
           </div>
         </div>
